Cause of issue is overflow-x:hidden being placed in the html class, attempting to add it to specific classes instead of the whole document to avoid the jquery scroll to break

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,8 +13,9 @@ body {
 html {
     width: 100%;
     height: 100%;
-     margin: 0px;
+    margin: 0px;
     padding: 0px;
+    
 }
 
 
@@ -40,6 +41,7 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    overflow-x: hidden;
 }
 
 @media screen and (max-width:500px) {
